[gd_scene load_steps=74 format=3 uid="uid://cypcaypadjavb"]

[ext_resource type="Script" path="res://player/player.gd" id="1_cqqbo"]
[ext_resource type="Texture2D" uid="uid://cln1ubxiy43oh" path="res://art/characters/elf/double_jump_start/0_Dark_Elves_Double Jump_000.png" id="1_tntal"]
[ext_resource type="Texture2D" uid="uid://n7mnms3u3wjr" path="res://art/characters/elf/double_jump_start/0_Dark_Elves_Double Jump_001.png" id="2_313ei"]
[ext_resource type="PackedScene" uid="uid://dy5oj1fkwoikk" path="res://player/player_camera.tscn" id="2_ubdao"]
[ext_resource type="Texture2D" uid="uid://k2rlkgmf0qqf" path="res://art/characters/elf/double_jump_start/0_Dark_Elves_Double Jump_002.png" id="3_qd354"]
[ext_resource type="Texture2D" uid="uid://cxmvprctwqect" path="res://art/characters/elf/double_jump_start/0_Dark_Elves_Double Jump_003.png" id="4_70s5i"]
[ext_resource type="Texture2D" uid="uid://bn4vyw1tvbcfy" path="res://art/characters/elf/double_jump_start/0_Dark_Elves_Double Jump_004.png" id="5_sx7u1"]
[ext_resource type="Texture2D" uid="uid://bghjle3m5kfyk" path="res://art/characters/elf/double_jump_start/0_Dark_Elves_Double Jump_005.png" id="6_swqnq"]
[ext_resource type="Texture2D" uid="uid://btiq78hksne3e" path="res://art/characters/elf/fall/0_Dark_Elves_Falling Down_000.png" id="7_ef5ck"]
[ext_resource type="Texture2D" uid="uid://c4wrx32bcp5na" path="res://art/characters/elf/fall/0_Dark_Elves_Falling Down_001.png" id="8_sab1q"]
[ext_resource type="Texture2D" uid="uid://dfjugvfb2u86x" path="res://art/characters/elf/fall/0_Dark_Elves_Falling Down_002.png" id="9_4dmtn"]
[ext_resource type="Texture2D" uid="uid://bk6xnw75aft36" path="res://art/characters/elf/fall/0_Dark_Elves_Falling Down_003.png" id="10_51fbb"]
[ext_resource type="Texture2D" uid="uid://b1v21v4uyx2ab" path="res://art/characters/elf/fall/0_Dark_Elves_Falling Down_004.png" id="11_brtdc"]
[ext_resource type="Texture2D" uid="uid://cpg3xbxy3my35" path="res://art/characters/elf/fall/0_Dark_Elves_Falling Down_005.png" id="12_p8jq0"]
[ext_resource type="Texture2D" uid="uid://cijdeq4s63sbc" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_000.png" id="13_m51gs"]
[ext_resource type="Texture2D" uid="uid://bkteqb4eah0qa" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_001.png" id="14_7k24f"]
[ext_resource type="Texture2D" uid="uid://bpmqns4rq7i6y" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_002.png" id="15_1lrgq"]
[ext_resource type="Texture2D" uid="uid://vq5a1sisnh85" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_003.png" id="16_avta4"]
[ext_resource type="Texture2D" uid="uid://bic52uma20jil" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_004.png" id="17_252ce"]
[ext_resource type="Texture2D" uid="uid://b0bn4jbu6kaj1" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_005.png" id="18_je6dr"]
[ext_resource type="Texture2D" uid="uid://nuekuvomd62b" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_006.png" id="19_00mx7"]
[ext_resource type="Texture2D" uid="uid://d1hmes836ehpc" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_007.png" id="20_dpuuc"]
[ext_resource type="Texture2D" uid="uid://bwnw7xytiba40" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_008.png" id="21_j0w64"]
[ext_resource type="Texture2D" uid="uid://bismuihjshd1t" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_009.png" id="22_vg4hd"]
[ext_resource type="Texture2D" uid="uid://6qscwkc5n2dc" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_010.png" id="23_r0hwt"]
[ext_resource type="Texture2D" uid="uid://cwxubw3rnrlrw" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_011.png" id="24_gq171"]
[ext_resource type="Texture2D" uid="uid://dw1lldpc4oyrq" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_012.png" id="25_nn72s"]
[ext_resource type="Texture2D" uid="uid://bvrjl2da0odg3" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_013.png" id="26_gmfu8"]
[ext_resource type="Texture2D" uid="uid://bbde7uk4pareh" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_014.png" id="27_behrd"]
[ext_resource type="Texture2D" uid="uid://d1bjkcwfimqcn" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_015.png" id="28_a31ik"]
[ext_resource type="Texture2D" uid="uid://b8vkkwnoxwyib" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_016.png" id="29_s4ghl"]
[ext_resource type="Texture2D" uid="uid://cdec6y5diqr24" path="res://art/characters/elf/idle/0_Dark_Elves_Idle_017.png" id="30_v6vaa"]
[ext_resource type="Texture2D" uid="uid://u8iq5q1t542k" path="res://art/characters/elf/jump/0_Dark_Elves_Jump Loop_000.png" id="31_8rxpy"]
[ext_resource type="Texture2D" uid="uid://1jxih3omnplt" path="res://art/characters/elf/jump/0_Dark_Elves_Jump Loop_001.png" id="32_x5633"]
[ext_resource type="Texture2D" uid="uid://bg6j36dnaqa3q" path="res://art/characters/elf/jump/0_Dark_Elves_Jump Loop_002.png" id="33_x472w"]
[ext_resource type="Texture2D" uid="uid://dj53sgsuhjs8y" path="res://art/characters/elf/jump/0_Dark_Elves_Jump Loop_003.png" id="34_v4wyd"]
[ext_resource type="Texture2D" uid="uid://bdyavl8jb5osq" path="res://art/characters/elf/jump/0_Dark_Elves_Jump Loop_004.png" id="35_cnd5y"]
[ext_resource type="Texture2D" uid="uid://bxqvlxtm0b4s8" path="res://art/characters/elf/jump/0_Dark_Elves_Jump Loop_005.png" id="36_oet6g"]
[ext_resource type="Texture2D" uid="uid://r07okw4p4exi" path="res://art/characters/elf/jump_start/0_Dark_Elves_Jump Start_000.png" id="37_bloum"]
[ext_resource type="Texture2D" uid="uid://bxja2hxgf0hku" path="res://art/characters/elf/jump_start/0_Dark_Elves_Jump Start_001.png" id="38_rplwm"]
[ext_resource type="Texture2D" uid="uid://bjtmx1ysh2qf4" path="res://art/characters/elf/jump_start/0_Dark_Elves_Jump Start_002.png" id="39_hwnuq"]
[ext_resource type="Texture2D" uid="uid://bkmvc6l4rvu5v" path="res://art/characters/elf/jump_start/0_Dark_Elves_Jump Start_003.png" id="40_0i6ht"]
[ext_resource type="Texture2D" uid="uid://lkbutps4vli4" path="res://art/characters/elf/jump_start/0_Dark_Elves_Jump Start_004.png" id="41_psrew"]
[ext_resource type="Texture2D" uid="uid://cmblja8sum4ea" path="res://art/characters/elf/jump_start/0_Dark_Elves_Jump Start_005.png" id="42_4r7gq"]
[ext_resource type="Texture2D" uid="uid://cap3ji30vpkpa" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_000.png" id="43_ffjh6"]
[ext_resource type="Texture2D" uid="uid://dl2whss56pv5b" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_001.png" id="44_i6f54"]
[ext_resource type="Texture2D" uid="uid://bbpw7etipn578" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_002.png" id="45_yurgl"]
[ext_resource type="Texture2D" uid="uid://dxg81r0w8cq3o" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_003.png" id="46_051y3"]
[ext_resource type="Texture2D" uid="uid://dxcj2pfbkbc2" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_004.png" id="47_34vi7"]
[ext_resource type="Texture2D" uid="uid://c0km3uh7lyt4p" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_005.png" id="48_hokj0"]
[ext_resource type="Texture2D" uid="uid://dakhxqux3pyny" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_006.png" id="49_dr715"]
[ext_resource type="Texture2D" uid="uid://dscr4r0esnaml" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_007.png" id="50_xes8f"]
[ext_resource type="Texture2D" uid="uid://ddp6e1g42swwn" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_008.png" id="51_w5vac"]
[ext_resource type="Texture2D" uid="uid://cqxxhjmjscb1x" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_009.png" id="52_6pjqp"]
[ext_resource type="Texture2D" uid="uid://b5rnqlnfbpeaj" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_010.png" id="53_sv8k3"]
[ext_resource type="Texture2D" uid="uid://c3k77bl7h8k83" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_011.png" id="54_vecnp"]
[ext_resource type="Texture2D" uid="uid://dggp1g6ic4rd" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_012.png" id="55_1npcs"]
[ext_resource type="Texture2D" uid="uid://dwlr6bfykskfp" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_013.png" id="56_yjdmd"]
[ext_resource type="Texture2D" uid="uid://dv6ipf3chsuy4" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_014.png" id="57_hx1mn"]
[ext_resource type="Texture2D" uid="uid://bt1nqranyldp8" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_015.png" id="58_v4xow"]
[ext_resource type="Texture2D" uid="uid://bvx8dwwui31g3" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_016.png" id="59_qow4d"]
[ext_resource type="Texture2D" uid="uid://c7gqj2o04sxlj" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_017.png" id="60_51o63"]
[ext_resource type="Texture2D" uid="uid://cvwj6xfth7mt2" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_018.png" id="61_6h4xl"]
[ext_resource type="Texture2D" uid="uid://cthx4nsid3vvu" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_019.png" id="62_3brr2"]
[ext_resource type="Texture2D" uid="uid://d4h854o6jfsk6" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_020.png" id="63_lwcil"]
[ext_resource type="Texture2D" uid="uid://bbthkjqiq33il" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_021.png" id="64_blcl7"]
[ext_resource type="Texture2D" uid="uid://b771rxse6n114" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_022.png" id="65_qh5q0"]
[ext_resource type="Texture2D" uid="uid://c2r31n6lj0pks" path="res://art/characters/elf/walk/0_Dark_Elves_Walking_023.png" id="66_4byj6"]
[ext_resource type="PackedScene" uid="uid://47i432ikeqhs" path="res://player/player_finder.tscn" id="69_tf6uc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lj384"]
size = Vector2(40, 56)

[sub_resource type="SpriteFrames" id="SpriteFrames_lt25w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_tntal")
}, {
"duration": 1.0,
"texture": ExtResource("2_313ei")
}, {
"duration": 1.0,
"texture": ExtResource("3_qd354")
}, {
"duration": 1.0,
"texture": ExtResource("4_70s5i")
}, {
"duration": 1.0,
"texture": ExtResource("5_sx7u1")
}, {
"duration": 1.0,
"texture": ExtResource("6_swqnq")
}],
"loop": false,
"name": &"double_jump_start",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ef5ck")
}, {
"duration": 1.0,
"texture": ExtResource("8_sab1q")
}, {
"duration": 1.0,
"texture": ExtResource("9_4dmtn")
}, {
"duration": 1.0,
"texture": ExtResource("10_51fbb")
}, {
"duration": 1.0,
"texture": ExtResource("11_brtdc")
}, {
"duration": 1.0,
"texture": ExtResource("12_p8jq0")
}],
"loop": true,
"name": &"fall",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_m51gs")
}, {
"duration": 1.0,
"texture": ExtResource("14_7k24f")
}, {
"duration": 1.0,
"texture": ExtResource("15_1lrgq")
}, {
"duration": 1.0,
"texture": ExtResource("16_avta4")
}, {
"duration": 1.0,
"texture": ExtResource("17_252ce")
}, {
"duration": 1.0,
"texture": ExtResource("18_je6dr")
}, {
"duration": 1.0,
"texture": ExtResource("19_00mx7")
}, {
"duration": 1.0,
"texture": ExtResource("20_dpuuc")
}, {
"duration": 1.0,
"texture": ExtResource("21_j0w64")
}, {
"duration": 1.0,
"texture": ExtResource("22_vg4hd")
}, {
"duration": 1.0,
"texture": ExtResource("23_r0hwt")
}, {
"duration": 1.0,
"texture": ExtResource("24_gq171")
}, {
"duration": 1.0,
"texture": ExtResource("25_nn72s")
}, {
"duration": 1.0,
"texture": ExtResource("26_gmfu8")
}, {
"duration": 1.0,
"texture": ExtResource("27_behrd")
}, {
"duration": 1.0,
"texture": ExtResource("28_a31ik")
}, {
"duration": 1.0,
"texture": ExtResource("29_s4ghl")
}, {
"duration": 1.0,
"texture": ExtResource("30_v6vaa")
}],
"loop": true,
"name": &"idle",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("31_8rxpy")
}, {
"duration": 1.0,
"texture": ExtResource("32_x5633")
}, {
"duration": 1.0,
"texture": ExtResource("33_x472w")
}, {
"duration": 1.0,
"texture": ExtResource("34_v4wyd")
}, {
"duration": 1.0,
"texture": ExtResource("35_cnd5y")
}, {
"duration": 1.0,
"texture": ExtResource("36_oet6g")
}],
"loop": true,
"name": &"jump",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("37_bloum")
}, {
"duration": 1.0,
"texture": ExtResource("38_rplwm")
}, {
"duration": 1.0,
"texture": ExtResource("39_hwnuq")
}, {
"duration": 1.0,
"texture": ExtResource("40_0i6ht")
}, {
"duration": 1.0,
"texture": ExtResource("41_psrew")
}, {
"duration": 1.0,
"texture": ExtResource("42_4r7gq")
}],
"loop": false,
"name": &"jump_start",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("43_ffjh6")
}, {
"duration": 1.0,
"texture": ExtResource("44_i6f54")
}, {
"duration": 1.0,
"texture": ExtResource("45_yurgl")
}, {
"duration": 1.0,
"texture": ExtResource("46_051y3")
}, {
"duration": 1.0,
"texture": ExtResource("47_34vi7")
}, {
"duration": 1.0,
"texture": ExtResource("48_hokj0")
}, {
"duration": 1.0,
"texture": ExtResource("49_dr715")
}, {
"duration": 1.0,
"texture": ExtResource("50_xes8f")
}, {
"duration": 1.0,
"texture": ExtResource("51_w5vac")
}, {
"duration": 1.0,
"texture": ExtResource("52_6pjqp")
}, {
"duration": 1.0,
"texture": ExtResource("53_sv8k3")
}, {
"duration": 1.0,
"texture": ExtResource("54_vecnp")
}, {
"duration": 1.0,
"texture": ExtResource("55_1npcs")
}, {
"duration": 1.0,
"texture": ExtResource("56_yjdmd")
}, {
"duration": 1.0,
"texture": ExtResource("57_hx1mn")
}, {
"duration": 1.0,
"texture": ExtResource("58_v4xow")
}, {
"duration": 1.0,
"texture": ExtResource("59_qow4d")
}, {
"duration": 1.0,
"texture": ExtResource("60_51o63")
}, {
"duration": 1.0,
"texture": ExtResource("61_6h4xl")
}, {
"duration": 1.0,
"texture": ExtResource("62_3brr2")
}, {
"duration": 1.0,
"texture": ExtResource("63_lwcil")
}, {
"duration": 1.0,
"texture": ExtResource("64_blcl7")
}, {
"duration": 1.0,
"texture": ExtResource("65_qh5q0")
}, {
"duration": 1.0,
"texture": ExtResource("66_4byj6")
}],
"loop": true,
"name": &"walk",
"speed": 24.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vsdyd"]
radius = 440.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3mud0"]
properties/0/path = NodePath("AnimatedSprite2D:animation")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("AnimatedSprite2D:scale")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:target_position")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("player_sprite")]
collision_layer = 2
collision_mask = 19
script = ExtResource("1_cqqbo")
player_camera = ExtResource("2_ubdao")
player_sprite = NodePath("AnimatedSprite2D")
max_jumps = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.08165e-12, -28)
shape = SubResource("RectangleShape2D_lj384")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.08165e-12, -30)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_lt25w")
animation = &"walk"
autoplay = "idle"

[node name="InteractableHandler" type="Area2D" parent="AnimatedSprite2D"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/InteractableHandler"]
shape = SubResource("CircleShape2D_vsdyd")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_3mud0")

[node name="PlayerFinder" parent="." instance=ExtResource("69_tf6uc")]
visible = false
position = Vector2(2.08165e-12, -27)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="AnimatedSprite2D/InteractableHandler" to="." method="_on_interactable_handler_area_entered"]
[connection signal="area_exited" from="AnimatedSprite2D/InteractableHandler" to="." method="_on_interactable_handler_area_exited"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
